# langchain-start

./: .gitignore  main.py  pyproject.toml  requirements.txt
agent01/: agent.py  langgraph.json  main.py  state.py
agent01/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent02/: data.txt  loader.py  main.py
agent03/: chunker.py  main.py  retriever.py  testport.py
agent04/: explainer.py  knowledge.txt  main.py
langgraph-quickstart/: agent.py
